Archive2/cd/a05570356af9a0/output
main.cpp: In function 'int main()':
main.cpp:41:36: error: cannot allocate an object of abstract type 'AlgorithmManager<Do_Something>'
     AlgorithmManager<Do_Something>();
                                    ^
main.cpp:28:7: note:   because the following virtual functions are pure within 'AlgorithmManager<Do_Something>':
 class AlgorithmManager
       ^
main.cpp:8:18: note: 	virtual void Algorithm::Compute(Algorithm::WorkData)
     virtual void Compute(WorkData) = 0;
                  ^
